historial alertas y analisis actualizado